[package]
name = "pumpportal-builder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
#anyhow = { workspace = true }
#bincode = { workspace = true }
#reqwest = { workspace = true }
#serde_json = { workspace = true }
#solana-sdk = { workspace = true }
#solana-rpc-client = { workspace = true }
#tokio = { workspace = true }